[package]
name = "chip8"
version = "0.1.0"
authors = ["KuldeepSinh Chauhan <chauhan.kuldeep.sinh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
rand = "0.5.5"
sdl2 = "0.33.0"
